feat: ComfyUI の初期化を待つ機能追加

--- a/web/200.html
+++ b/web/200.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/_nuxt/entry.Beopki7Z.css">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/9XY9u1-D.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Do0XnfSz.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CvWj_VUD.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D5cle7fd.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Cl_OPRdB.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/q_WHIk-H.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.B5EGXglL.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/PromptSetting.DQPieWL_.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/LookStyleRatio.qtMrFk5B.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CCrkv3WP.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bh05x_NU.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/jBmGgekp.js">
-<script type="module" src="/_nuxt/9XY9u1-D.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1728536185023,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:false,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",SIZE_TYPE:"px",DARKMODE:false,STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"11f7aae0-58f8-4205-8b61-c728aa991ded",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DLGkVtGW.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BoDNvDVw.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CaGtMLrF.js">
+<script type="module" src="/_nuxt/D5cle7fd.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1728540449769,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:false,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",SIZE_TYPE:"px",DARKMODE:false,STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"8591a68b-62db-4202-8f6e-5dfdb4f847fd",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
