--- a/web/404.html
+++ b/web/404.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/_nuxt/entry.Beopki7Z.css">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D5cle7fd.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Cl_OPRdB.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/q_WHIk-H.js">
-<link rel="prefetch" as="style" crossorigin href="/_nuxt/default.B5EGXglL.css">
-<link rel="prefetch" as="style" crossorigin href="/_nuxt/PromptSetting.DQPieWL_.css">
+<link rel="stylesheet" href="/_nuxt/entry.4IA8UwAw.css">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CNusSvDG.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D4AvRTFI.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/4hu1zawO.js">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/default.DL7QxhFL.css">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/GenerateSettingList.BmWUiZl3.css">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/LookStyleSetting.Dewa3Srs.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/LookStyleRatio.qtMrFk5B.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DLGkVtGW.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BoDNvDVw.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CaGtMLrF.js">
-<script type="module" src="/_nuxt/D5cle7fd.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1728540449770,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:false,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",SIZE_TYPE:"px",DARKMODE:false,STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"8591a68b-62db-4202-8f6e-5dfdb4f847fd",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/PromptSetting.DLMCEXX_.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CJmUksgf.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CZ0TxWfv.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D92ktXZx.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CfS0yKqR.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/m1mnEoTN.js">
+<script type="module" src="/_nuxt/CNusSvDG.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1728547016474,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",SIZE_TYPE:"px",DARKMODE:false,STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"d375456a-9c14-4a55-9301-256b3de41bdb",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
