--- a/web/index.html
+++ b/web/index.html
@@ -19,21 +19,21 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/_nuxt/entry.DfwJCM7v.css">
-<link rel="modulepreload" as="script" crossorigin="" href="/_nuxt/itlUzP9w.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/DIPv21Oy.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CraG7c7d.js">
+<link rel="modulepreload" as="script" crossorigin="" href="/_nuxt/agKqeC95.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/iCReG6jN.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/BYhQsdT7.js">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/default.DL7QxhFL.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/GenerateSettingList.BmWUiZl3.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/LookStyleSetting.Dewa3Srs.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/Ratio.qtMrFk5B.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/PromptSetting.DLMCEXX_.css">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CqgqzxE7.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/4zGJWPFM.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/4xlfOQ3N.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CIzctAQ1.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/Df7ZBI8r.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/B1Q5BFS_.js">
-<script type="module" src="/_nuxt/itlUzP9w.js" crossorigin=""></script></head><body>
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/BOe9lzQQ.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/yZtjY9Xf.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/DpoEjMN9.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/Eebxz5mx.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/BLGaLeuu.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CNsNZes5.js">
+<script type="module" src="/_nuxt/agKqeC95.js" crossorigin=""></script></head><body>
 <!-- ComfyUI <body /> Start -->
 		<div id="vue-app"></div>
 		<div id="comfy-user-selection" class="comfy-user-selection" style="display: none">
@@ -64,5 +64,5 @@
 			</main>
 		</div>
 <!-- ComfyUI <body /> End -->
-<div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1728606969993,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",SIZE_TYPE:"px",DARKMODE:false,STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"15cc1327-a723-45cd-b735-b3c327eb73c7",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1728610526556,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",SIZE_TYPE:"px",DARKMODE:false,theme:{icon:{dir:"/nuxt/assets/icons"}},STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"ae0a9810-c287-40c9-b6e4-9fc340102c35",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
