--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/_nuxt/entry.DrCdpRBl.css">
-<link rel="modulepreload" as="script" crossorigin="" href="/_nuxt/CCUWqki-.js">
+<link rel="modulepreload" as="script" crossorigin="" href="/_nuxt/bfqySI7k.js">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/creator.CxFa_mdW.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/discover.TaBgMKzZ.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/earth.L2wQGbz9.svg">
@@ -34,20 +34,20 @@
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/shakehands.BdiZNjhH.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/storyboard.B0coGgSr.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/supporter.Dku722a3.svg">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/C8uaZiWe.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CYzJ4w0T.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/BVRbZfH6.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/8fSUQOZz.js">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/default.DL7QxhFL.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/GenerateSettingList.BmWUiZl3.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/LookStyleSetting.Dewa3Srs.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/Ratio.qtMrFk5B.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/PromptSetting.DLMCEXX_.css">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/Dex3KQ06.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/DjGNZBcK.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/B8U0sN3i.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/DZT1OsYu.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/BAvUHMSe.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CM8h6HLD.js">
-<script type="module" src="/_nuxt/CCUWqki-.js" crossorigin=""></script></head><body>
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CiBCjGwj.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/3XkUM7Qt.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/BFRaDKq5.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CJAG1R97.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/PBV2HLdt.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/Bhyde6Hv.js">
+<script type="module" src="/_nuxt/bfqySI7k.js" crossorigin=""></script></head><body>
 <!-- ComfyUI <body /> Start -->
 		<div id="vue-app"></div>
 		<div id="comfy-user-selection" class="comfy-user-selection" style="display: none">
@@ -78,5 +78,5 @@
 			</main>
 		</div>
 <!-- ComfyUI <body /> End -->
-<div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1728611818291,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",SIZE_TYPE:"px",DARKMODE:false,STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"},theme:{icon:{dir:"/nuxt/assets/icons"}}},app:{baseURL:"/",buildId:"f447572d-4d1e-46b3-8ca7-18d46151c848",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1728621982013,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"28a27f51-105f-49ba-998d-9953496ec72b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
