--- a/web/index.html
+++ b/web/index.html
@@ -18,8 +18,8 @@
 <!-- ComfyUI <head /> End -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/_nuxt/entry.D-ost5kb.css">
-<link rel="modulepreload" as="script" crossorigin="" href="/_nuxt/oAIcD0M7.js">
+<link rel="stylesheet" href="/_nuxt/entry.DHVk0Wtd.css">
+<link rel="modulepreload" as="script" crossorigin="" href="/_nuxt/D3vO-unn.js">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/creator.CxFa_mdW.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/discover.TaBgMKzZ.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/earth.L2wQGbz9.svg">
@@ -34,20 +34,21 @@
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/shakehands.BdiZNjhH.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/storyboard.B0coGgSr.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/supporter.Dku722a3.svg">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/Dzj8QcP7.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/M9ga0V1_.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/DRMfdgAU.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/BUgTC1TV.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/Bt1NFM7b.js">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/default.DL7QxhFL.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/GenerateSettingList.BmWUiZl3.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/LookStyleSetting.Dewa3Srs.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/Ratio.qtMrFk5B.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/PromptSetting.DLMCEXX_.css">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/BvEAypvz.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/W1heeDsD.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CT_c1fSr.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/5QpRvlQg.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/DqAWvf9i.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/r7GIl_gI.js">
-<script type="module" src="/_nuxt/oAIcD0M7.js" crossorigin=""></script></head><body>
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/DP-o2GaU.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/B3IvlRCj.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/id6Y29uN.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/tfbgGCaV.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/BIOT7JMZ.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/DP8F_mke.js">
+<script type="module" src="/_nuxt/D3vO-unn.js" crossorigin=""></script></head><body>
 <!-- ComfyUI <body /> Start -->
 		<div id="vue-app"></div>
 		<div id="comfy-user-selection" class="comfy-user-selection" style="display: none">
@@ -78,5 +79,5 @@
 			</main>
 		</div>
 <!-- ComfyUI <body /> End -->
-<div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1728636699260,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"4a9f78c6-7150-4f8b-8ebb-3e1a2cfb2e1c",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1728643200684,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"ee6e81dd-2e81-4fc8-9454-fa1d56dfbc04",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
