--- a/web/404.html
+++ b/web/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/_nuxt/entry.DHVk0Wtd.css">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D3vO-unn.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Dhsvph1B.js">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/creator.CxFa_mdW.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/discover.TaBgMKzZ.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/earth.L2wQGbz9.svg">
@@ -16,19 +16,19 @@
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/shakehands.BdiZNjhH.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/storyboard.B0coGgSr.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/supporter.Dku722a3.svg">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DRMfdgAU.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BUgTC1TV.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/saljwucb.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Cljis40U.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/Bt1NFM7b.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.DL7QxhFL.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/GenerateSettingList.BmWUiZl3.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/LookStyleSetting.Dewa3Srs.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/Ratio.qtMrFk5B.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/PromptSetting.DLMCEXX_.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DP-o2GaU.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B3IvlRCj.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/id6Y29uN.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/tfbgGCaV.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BIOT7JMZ.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DP8F_mke.js">
-<script type="module" src="/_nuxt/D3vO-unn.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1728643200684,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"ee6e81dd-2e81-4fc8-9454-fa1d56dfbc04",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BxHG7vou.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/bZo_vq1v.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bx4T7Smr.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/ANsrvqry.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CZT8dbm6.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C0opKuuL.js">
+<script type="module" src="/_nuxt/Dhsvph1B.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1728645002706,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"c91b9a54-f1ef-4a32-975b-2ba05a0101ec",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
