feat: ComfyUI 表示切り替えをスムーズにして開発しやすさ改善

--- a/web/200.html
+++ b/web/200.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/_nuxt/entry.BgQqtT4K.css">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/joyJTRoy.js">
+<link rel="stylesheet" href="/_nuxt/entry.ViYmMBqh.css">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CEksBxd6.js">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/creator.CxFa_mdW.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/discover.TaBgMKzZ.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/earth.L2wQGbz9.svg">
@@ -16,19 +16,19 @@
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/shakehands.BdiZNjhH.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/storyboard.B0coGgSr.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/supporter.Dku722a3.svg">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Ck3bQ_wh.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/1SP4ssi3.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BCFba9EX.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CtV_Q1tx.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/Bt1NFM7b.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.DL7QxhFL.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/GenerateSettingList.BmWUiZl3.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/LookStyleSetting.Dewa3Srs.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/Ratio.qtMrFk5B.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/PromptSetting.DLMCEXX_.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BCMHwtF6.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D3P8x130.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CP_OJFz1.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CauCvNQ2.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DhIkglGV.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BQ4-uqpf.js">
-<script type="module" src="/_nuxt/joyJTRoy.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1729043241379,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"35cdd840-e684-4694-ac82-42138c1489ea",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/rUMyDTCf.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Pgaiz6XD.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bel2iWVX.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/SiDxIiSB.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CNoM7xFm.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CBms8Xt8.js">
+<script type="module" src="/_nuxt/CEksBxd6.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1729046058758,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"34cee20f-da62-46f7-9ccb-1eac52affc0d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
