--- a/web/nuxt/index.html
+++ b/web/nuxt/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html  lang="ja" data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Honoo Technologies</title>
-<link rel="stylesheet" href="/_nuxt/entry.IjbKYXUq.css">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/H9sU-Lyy.js">
+<link rel="stylesheet" href="/_nuxt/entry.0MSpOCGx.css">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DRtnay5Q.js">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/creator.CxFa_mdW.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/discover.TaBgMKzZ.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/earth.L2wQGbz9.svg">
@@ -17,9 +17,9 @@
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/shakehands.BdiZNjhH.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/storyboard.B0coGgSr.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/supporter.Dku722a3.svg">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D0zpSV87.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BfV6hQI8.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bvd2SCvG.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/SWbUQB_W.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CRFGTXnb.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/XFFUsyJK.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.TIes16pT.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/Logo.CGXJu1mu.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/GenerateSettingItem.BSO7zXcp.css">
@@ -28,16 +28,16 @@
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/ImageSetting.CqCvvYEL.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/Ratio.qtMrFk5B.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/PromptSetting.Dkzo1h_T.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DjBTp0A2.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/C3RK4QIA.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/eSIPt_fz.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/T5HE0BgI.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B3szof3F.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bstebv1I.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Cy9bI0E-.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/lDt7_fCj.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CnMINHtt.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/k5UjoFgE.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bka4xi7B.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CWyfg425.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BvUwoWwT.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/m2fR89IK.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/9ndsW997.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BaStOyk_.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D5FXmLHB.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Y2lc-PcP.js">
 <link rel="icon" type="image/x-icon" href="/favicon.ico?v=0.1.0-alpha.4">
-<script type="module" src="/_nuxt/H9sU-Lyy.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"Honoo Technologies"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1735264523801,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{ENVIRONMENT:"production",DOMAIN:".honoo.tokyo",TOKEN_KEY:"anime_background_honoo_token",HONOO_TOKEN_KEY:"honoo_token",BASE_URL:"https://anime-background.honoo.tokyo",API_URL:"https://anime-background-api.honoo.tokyo/api",HONOO_API_URL:"https://api.honoo.tokyo/api",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",DEV_ENABLED:false,COMFYUI_GENERATE_ENABLED:true,USE_API_FOR_GENERATION:true},app:{baseURL:"/",buildId:"8533a53f-d405-48ee-8965-8275d2f62d30",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/DRtnay5Q.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"Honoo Technologies"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1735264864163,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{ENVIRONMENT:"production",DOMAIN:".honoo.tokyo",TOKEN_KEY:"anime_background_honoo_token",HONOO_TOKEN_KEY:"honoo_token",BASE_URL:"https://anime-background.honoo.tokyo",API_URL:"https://anime-background-api.honoo.tokyo/api",HONOO_API_URL:"https://api.honoo.tokyo/api",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",DEV_ENABLED:false,COMFYUI_GENERATE_ENABLED:true,USE_API_FOR_GENERATION:true},app:{baseURL:"/",buildId:"4373b2a7-abbc-4abe-bdf4-0e542dad523f",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
